# az-django-emailuser

./: .gitignore  README.md  pyproject.toml
mysite/accounts/: admin.py  backend.py  forms.py  models.py  urls.py  views.py
mysite/accounts/migrations/: 0001_initial.py  0002_auto_20211024_2335.py
mysite/accounts/templates/accounts/: about_user.html  change_password.html  change_password_complete.html  login.html  signup.html  welcome.html
mysite/books/: models.py
mysite/config/: asgi.py  base.py  converters.py  local.py  settings.py  urls.py  wsgi.py
mysite/mysite/: settings.py
mysite/templates/: base.html  home.html
mysite/user/: models.py
