[tool.poetry]
name = "az-django-emailuser"
version = "0.1.0"
description = "django practice"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
python-dotenv = "^0.19.1"
psycopg2 = "^2.9.1"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
django-debug-toolbar = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
